jss-compiler/tests/lexer/invalid/multiline_comment.jss
/* comentario multilinha nao permitido */
let int x = 1;
